# astarte-device-sdk-cpp

./: .clang-format  .clang-tidy  .gersemirc  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  REUSE.toml  build_sample.ps1  build_sample.sh  build_sample_conan.sh  build_samples.sh  conanfile.py  docs.sh  end_to_end.sh  format.sh  get_started.md  tidy.sh  unit.sh
.github/: dependabot.yml
.github/scripts/: build-grpc.sh  setup-grpc.sh
.github/workflows/: build.yaml  doc-check.yaml  doc-generation.yaml  doc.yaml  e2e-test.yaml  install_interfaces.sh  reuse-lint.yml  static.yaml  unit.yaml
LICENSES/: MIT.txt
cmake/: AstarteGRPCTransport.cmake  AstarteMQTTTransport.cmake  Config.cmake.in
doc/: astarte-device-sdk.doxyfile.in  astarte-device-sdk.extended.doxyfile.in
doc/_doxygen/: header.html
end_to_end/: CMakeLists.txt  README.md  conanfile.py
end_to_end/include/: action.hpp  action_mqtt.hpp  case.hpp  exceptions.hpp  orchestrator.hpp  shared_queue.hpp  transport.hpp  utils.hpp
end_to_end/include/constants/: astarte_interfaces.hpp  astarte_time.hpp
end_to_end/include/testcases/: device_add_remove_interface.hpp  device_aggregate.hpp  device_datastream.hpp  device_property.hpp  device_reconnection.hpp  device_status.hpp  server_aggregate.hpp  server_datastream.hpp  server_property.hpp
end_to_end/include/testcases/mqtt/: device_pairing.hpp
end_to_end/interfaces/: org.astarte-platform.cpp.end-to-end.DeviceAggregate.json  org.astarte-platform.cpp.end-to-end.DeviceDatastream.json  org.astarte-platform.cpp.end-to-end.DeviceProperty.json  org.astarte-platform.cpp.end-to-end.ServerAggregate.json  org.astarte-platform.cpp.end-to-end.ServerDatastream.json  org.astarte-platform.cpp.end-to-end.ServerProperty.json
end_to_end/src/: main.cpp
include/: astarte_device.h  astarte_exceptions.h  astarte_individual.h
include/astarte_device_sdk/: data.hpp  device.h  device.hpp  device_grpc.hpp  device_mqtt.hpp  errors.hpp  exceptions.h  exceptions.hpp  formatter.hpp  individual.h  individual.hpp  msg.hpp  object.hpp  ownership.hpp  property.hpp  stored_property.hpp  type.hpp
include/astarte_device_sdk/grpc/: device_grpc.hpp
include/astarte_device_sdk/mqtt/: config.hpp  crypto.hpp  device_mqtt.hpp  errors.hpp  exceptions.hpp  pairing.hpp
private/: aggregate_private.h  astarte_individual_priv.h  device_grpc_impl.hpp  device_impl.hpp  exponential_backoff.hpp  grpc_converter.hpp  grpc_formatter.hpp  grpc_interceptors.h  individual_private.h  individual_private.hpp  logger.hpp  msg_private.hpp  object_private.h  object_private.hpp  shared_queue.h  shared_queue.hpp
private/grpc/: device_grpc_impl.hpp  grpc_converter.hpp  grpc_interceptors.hpp
private/mqtt/: crypto.hpp  device_mqtt_impl.hpp
samples/: CMakeLists.txt  main.cpp
samples/grpc/: README.md  main.cpp
samples/grpc/interfaces/: org.astarte-platform.cpp.examples.DeviceAggregate.json  org.astarte-platform.cpp.examples.DeviceDatastream.json  org.astarte-platform.cpp.examples.ServerProperty.json
samples/grpc/native/: CMakeLists.txt  README.md  main.cpp
samples/grpc/qt/: CMakeLists.txt  README.md  conanfile.py  main.cpp
samples/interfaces/: org.astarte-platform.cpp.examples.DeviceProperty.json  org.astarte-platform.cpp.examples.ServerAggregate.json
samples/mqtt/native/: CMakeLists.txt  README.md  conanfile.py  config.hpp  main.cpp
samples/mqtt/registration/: CMakeLists.txt  README.md  main.cpp
samples/qt/: CMakeLists.txt  README.md  build_qt_example.sh  conanfile.py  main.cpp
samples/simple/: CMakeLists.txt  README.md  conanfile.py  main.cpp
samples/simple/interfaces/: org.astarte-platform.cpp.examples.ServerDatastream.json
scripts/: .pylintrc  build_sample_cmake.py  build_sample_cmake.sh  build_sample_conan.py  build_sample_conan.sh  clean_sample.py  setup_conan_env.sh  setup_fetch_env.sh  setup_python.ps1  setup_python.sh
src/: aggregate.cpp  astarte_device.cpp  astarte_exceptions.cpp  astarte_individual.cpp  data.cpp  device.cpp  device_grpc.cpp  device_grpc_impl.cpp  device_impl.cpp  errors.cpp  exceptions.cpp  grpc_converter.cpp  grpc_interceptors.cpp  individual.cpp  msg.cpp  object.cpp  property.cpp  stored_property.cpp
src/grpc/: device_grpc.cpp  device_grpc_impl.cpp  grpc_converter.cpp  grpc_interceptors.cpp
src/mqtt/: config.cpp  crypto.cpp  device_mqtt.cpp  device_mqtt_impl.cpp  errors.cpp  pairing.cpp
unit/: CMakeLists.txt  conversion_test.cpp  crypto_test.cpp  data_test.cpp  errors_test.cpp  exponential_backoff_test.cpp  individual_test.cpp  msg_test.cpp
